--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:Z3UPApgVAqOuj3m9U4XMp/zAjnkViMu7rOcvXVM0ojg=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://allercheck.io
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -24,9 +24,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=Aller
-DB_USERNAME=root
-DB_PASSWORD=root
+DB_DATABASE=u316874775_aller
+DB_USERNAME=u316874775_aller
+DB_PASSWORD=Allercheckdb123
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
